# azure-blob-interface

./: .gitignore  README.md  setup.cfg  setup.py
azure_blob_interface/: __init__.py  azure_blob.py  filepaths.py  storage.py
