[metadata]
name = azure_blob_interface
author = Thomas Nyegaard-Signori
author_email = thns@dhigroup.com
description = Azure blob storage interfacing

[options]
packages=find:
include_package_data = true
python_requires = >=3.6
install_requires =
    azure-storage-blob
    #opencensus-ext-azure
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-flake8

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
exclude=
    .eggs
    doc

